# exam-materials-studio

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
docs/: openai-codex-oss-application.md  resource-format.md
examples/: igcse_computer_science_boolean_logic.json  igcse_economics_definitions.json  preschool_number_sense_activity.json  primary_science_materials.csv  secondary_history_source_analysis.yaml  university_microeconomics_elasticity_study_guide.json
src/exam_materials_studio/: __init__.py  cli.py  inventory.py  loader.py  models.py  pathway.py  presets.py  renderer.py  scaffold.py  validator.py
tests/: test_cli.py  test_inventory.py  test_loader.py  test_models.py  test_pathway.py  test_presets.py  test_release_metadata.py  test_renderer.py  test_scaffold.py  test_validator.py
