[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "exam-materials-studio"
version = "0.2.0"
description = "Build printable education resources, answer keys, validation reports, and static catalogs from JSON, YAML, or CSV syllabus data."
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["PyYAML>=6.0"]
license = { text = "MIT" }
authors = [{ name = "Eian Lim" }]
keywords = ["education", "exams", "worksheets", "igcse", "teaching"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Education",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Education",
  "Topic :: Text Processing :: Markup",
]

[project.scripts]
exam-materials-studio = "exam_materials_studio.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
